<resources>
    <string name="app_name">Heads Up Pics</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heads_up">Heads UP</string>
    <string name="pics">Pics</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="upload_pic">Upload Pic</string>
    <string name="upload">Upload</string>
    <string name="back">Back</string>
    <string name="delete">delete</string>
    <string name="download">download</string>
</resources>